# sidm-vdsigmas

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy_docs.yml
CLASSICS/: cross_sections.py
sidm_vdsigmas/: __init__.py  _version.py  interaction.py  sidm.py
sidm_vdsigmas/sigmas/: CLASSIC.py  gizmo.py  moller.py  rutherford.py
sidm_vdsigmas/tests/: test_interaction.py
