[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm>=8.1",
]

[project]
name = "sidm-vdsigmas"
description = "Calculate various attributes for velocity-dependent Self-Interacting Dark Matter cross sections."
authors = [{name="Michael Ryan",email="mtryan83@gmail.com"}]
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = [
  "numpy >= 2",
  "scipy >= 1.4",
  "unyt >= 3",
  "CLASSICS @ git+https://github.com/kahlhoefer/CLASSICS.git"
]
dynamic = ["version","readme"]

[project.optional-dependencies]
dev = ["pre-commit"]
tests = ["dev", "pytest", "pytest-cov"]

[project.urls]
home = "https://github.com/mtryan83/sidm-vdsigmas"
source = "https://github.com/mtryan83/sidm-vdsigmas"
issues = "https://github.com/mtryan83/sidm-vdisgmas/issues/new"

[tool.setuptools]
packages = ["sidm_vdsigmas"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
write_to = "sidm_vdsigmas/_version.py"
